--- a/FlightFrontend/package.json
+++ b/FlightFrontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "axios": "^1.8.4",
     "roboto-fontface": "*",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.4.31",
     "vuetify": "^3.6.14"
   },
